--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node server.js",
     "deploy": "NODE_ENV=production PORT=4000 npm run build && NODE_ENV=production PORT=4000 npm start",
     "test": "mocha --compilers js:babel-core/register --require ./test_setup.js 'src/**/*.unit.@(js)'",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "lint": "node_modules/eslint/bin/eslint.js src/"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,9 @@
     "babel-preset-react": "^6.3.13",
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
+    "eslint": "^2.5.3",
+    "eslint-config-airbnb": "^6.2.0",
+    "eslint-plugin-react": "^4.2.3",
     "file-loader": "^0.8.5",
     "jsdom": "^7.2.2",
     "mocha": "^2.3.4",
@@ -31,12 +35,6 @@
     "webpack": "^1.12.11",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.6.4"
-  },
-  "babel": {
-    "presets": [
-      "es2015",
-      "react"
-    ]
   },
   "dependencies": {
     "express": "^4.13.4",
