--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npm run clean && npm run build:webpack",
     "start": "node server.js",
     "deploy": "NODE_ENV=production PORT=4000 npm run build && NODE_ENV=production PORT=4000 npm start",
-    "test": "mocha --compilers js:babel-core/register --require ./test_setup.js 'src/**/*.unit.@(js)'",
+    "test": "mocha ./test_setup.js 'src/**/*.unit.@(js)'",
     "test:watch": "npm run test -- --watch",
     "lint": "node_modules/eslint/bin/eslint.js src/"
   },
@@ -19,10 +19,12 @@
   "devDependencies": {
     "babel-core": "^6.4.0",
     "babel-loader": "^6.2.1",
+    "babel-preset-airbnb": "^1.1.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
+    "enzyme": "^2.2.0",
     "eslint": "^2.5.3",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.2.3",
