--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npm run clean && npm run build:webpack",
     "start": "node server.js",
     "deploy": "NODE_ENV=production PORT=4000 npm run build && NODE_ENV=production PORT=4000 npm start",
-    "test": "mocha ./test_setup.js 'src/**/*.unit.@(js)'",
+    "test": "npm run lint && mocha ./test_setup.js 'src/**/*.unit.@(js)'",
     "test:watch": "npm run test -- --watch",
     "lint": "node_modules/eslint/bin/eslint.js src/"
   },
