--- a/package.json
+++ b/package.json
@@ -24,16 +24,21 @@
     "babel-preset-react": "^6.3.13",
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
+    "css-loader": "^0.23.1",
     "enzyme": "^2.2.0",
     "eslint": "^2.5.3",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.2.3",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "jsdom": "^7.2.2",
     "mocha": "^2.3.4",
+    "node-sass": "^3.4.2",
     "react-addons-test-utils": "^0.14.6",
     "react-hot-loader": "^1.3.0",
     "rimraf": "^2.5.1",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.11",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.6.4"
