--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "clean": "rimraf dist",
     "build:webpack": "webpack --config webpack.config.prod.js",
-    "build": "npm run clean && npm run build:webpack",
-    "deploy": "NODE_ENV=production PORT=4000 npm run build && NODE_ENV=production PORT=4000 npm start",
-    "start": "node src/server/server.js",
+    "build:server": "babel src/server --out-dir dist/server --copy-files",
+    "build": "npm run clean && npm run build:webpack && npm run build:server",
+    "deploy": "NODE_ENV=production PORT=4000 npm run build && NODE_ENV=production PORT=4000 node dist/server/server.js",
+    "start": "babel-node src/server/server.js",
     "test": "npm run lint && npm run mocha",
     "test:watch": "npm run test -- --watch",
     "lint": "node_modules/eslint/bin/eslint.js src/",
@@ -45,8 +46,10 @@
     "webpack-hot-middleware": "^2.6.4"
   },
   "dependencies": {
+    "babel-cli": "^6.6.5",
     "express": "^4.13.4",
     "history": "^1.17.0",
+    "http-proxy-middleware": "^0.13.0",
     "immutable": "^3.7.6",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
