--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,13 @@
-server:
-    container_name: server
-    image: server
-    ports:
-        - "5000:8080"
-
-frontend:
-    container_name: frontend
-    image: frontend
-    ports:
-        - "8000:3000"
-    environment:
-        - NODE_ENV=development
-        - SERVER_ADDR=http://192.168.99.100:5000
+web:
+  build: .
+  ports:
+  - "8000:3000"
+  volumes:
+  - .:/usr/src/app/:rw
+  environment:
+  - NODE_ENV=dev
+  command: >
+    sh -c '
+      npm install &&
+      npm start
+      '
