--- a/package.json
+++ b/package.json
@@ -29,14 +29,15 @@
     "css-loader": "^0.23.1",
     "enzyme": "^2.2.0",
     "eslint": "^2.5.3",
-    "eslint-config-airbnb": "^6.2.0",
+    "eslint-config-airbnb": "^7.0.0",
+    "eslint-plugin-jsx-a11y": "^0.6.2",
     "eslint-plugin-react": "^4.2.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
-    "jsdom": "^7.2.2",
+    "jsdom": "^8.3.1",
     "mocha": "^2.3.4",
     "node-sass": "^3.4.2",
-    "react-addons-test-utils": "^0.14.6",
+    "react-addons-test-utils": "^15.0.1",
     "react-hot-loader": "^1.3.0",
     "rimraf": "^2.5.1",
     "sass-loader": "^3.2.0",
@@ -47,14 +48,16 @@
   },
   "dependencies": {
     "babel-cli": "^6.6.5",
+    "eslint-config-airbnb": "^7.0.0",
     "express": "^4.13.4",
-    "history": "^1.17.0",
     "http-proxy-middleware": "^0.13.0",
     "immutable": "^3.7.6",
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
+    "jsdom": "^8.3.1",
+    "react": "^15.0.1",
+    "react-addons-test-utils": "^15.0.1",
+    "react-dom": "^15.0.1",
     "react-redux": "^4.0.6",
-    "react-router": "^1.0.3",
+    "react-router": "^2.1.1",
     "redux": "^3.0.5",
     "socket.io-client": "^1.4.4"
   }
