--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-airbnb": "^1.1.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-2": "^6.5.0",
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
     "css-loader": "^0.23.1",
@@ -52,6 +53,7 @@
     "express": "^4.13.4",
     "http-proxy-middleware": "^0.13.0",
     "immutable": "^3.7.6",
+    "isomorphic-fetch": "^2.2.1",
     "jsdom": "^8.3.1",
     "react": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
@@ -59,6 +61,7 @@
     "react-redux": "^4.0.6",
     "react-router": "^2.1.1",
     "redux": "^3.0.5",
+    "redux-promise-middleware": "^3.0.0",
     "socket.io-client": "^1.4.4"
   }
 }
