--- a/package.json
+++ b/package.json
@@ -57,6 +57,11 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.12.11",
     "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.6.4"
+    "webpack-hot-middleware": "^2.6.4",
+    "express-session": "^1.13.0",
+    "json-loader": "^0.5.4",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0"
   }
 }
