--- a/package.json
+++ b/package.json
@@ -45,9 +45,7 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.12.11",
     "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.6.4"
-  },
-  "dependencies": {
+    "webpack-hot-middleware": "^2.6.4",
     "babel-cli": "^6.6.5",
     "eslint-config-airbnb": "^7.0.0",
     "express": "^4.13.4",
