--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.6.5",
     "babel-core": "^6.4.0",
     "babel-loader": "^6.2.1",
     "babel-preset-airbnb": "^1.1.1",
@@ -33,33 +34,29 @@
     "eslint-config-airbnb": "^7.0.0",
     "eslint-plugin-jsx-a11y": "^0.6.2",
     "eslint-plugin-react": "^5.0.1",
+    "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
-    "jsdom": "^8.3.1",
-    "mocha": "^2.3.4",
-    "node-sass": "^3.4.2",
-    "react-addons-test-utils": "^15.0.1",
-    "react-hot-loader": "^1.3.0",
-    "rimraf": "^2.5.1",
-    "sass-loader": "^3.2.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.12.11",
-    "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.6.4",
-    "babel-cli": "^6.6.5",
-    "eslint-config-airbnb": "^7.0.0",
-    "express": "^4.13.4",
     "http-proxy-middleware": "^0.15.0",
     "immutable": "^3.7.6",
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^8.3.1",
+    "mocha": "^2.3.4",
+    "node-sass": "^3.4.2",
     "react": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-hot-loader": "^1.3.0",
     "react-redux": "^4.0.6",
     "react-router": "^2.2.3",
     "redux": "^3.0.5",
     "redux-promise-middleware": "^3.0.0",
-    "socket.io-client": "^1.4.4"
+    "rimraf": "^2.5.1",
+    "sass-loader": "^3.2.0",
+    "socket.io-client": "^1.4.4",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.12.11",
+    "webpack-dev-middleware": "^1.5.1",
+    "webpack-hot-middleware": "^2.6.4"
   }
 }
