- basic session auth works

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-stage-2": "^6.5.0",
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
+    "cookie-parser": "^1.4.1",
     "css-loader": "^0.23.1",
     "enzyme": "^2.2.0",
     "eslint": "^2.5.3",
@@ -35,14 +36,19 @@
     "eslint-plugin-jsx-a11y": "^0.6.2",
     "eslint-plugin-react": "^5.0.1",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "http-proxy-middleware": "^0.15.0",
     "immutable": "^3.7.6",
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^8.3.1",
+    "json-loader": "^0.5.4",
     "mocha": "^2.3.4",
+    "morgan": "^1.7.0",
     "node-sass": "^3.4.2",
+    "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
     "react": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
     "react-dom": "^15.0.1",
@@ -57,11 +63,6 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.12.11",
     "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.6.4",
-    "express-session": "^1.13.0",
-    "json-loader": "^0.5.4",
-    "morgan": "^1.7.0",
-    "passport": "^0.3.2",
-    "passport-google-oauth": "^1.0.0"
+    "webpack-hot-middleware": "^2.6.4"
   }
 }
