--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "redux-promise-middleware": "^3.0.0",
     "rimraf": "^2.5.1",
     "sass-loader": "^3.2.0",
+    "sinon": "^1.17.4",
     "socket.io-client": "^1.4.4",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.11",
