--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "node-sass": "^3.4.2",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
+    "q": "^1.4.1",
     "react": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
     "react-dom": "^15.0.1",
@@ -57,6 +58,7 @@
     "react-router": "^2.2.3",
     "redux": "^3.0.5",
     "redux-promise-middleware": "^3.0.0",
+    "request": "^2.72.0",
     "rimraf": "^2.5.1",
     "sass-loader": "^3.2.0",
     "sinon": "^1.17.4",
