--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "npm run lint && npm run mocha",
     "test:watch": "npm run test -- --watch",
     "lint": "node_modules/eslint/bin/eslint.js src/",
-    "mocha": "mocha ./test_setup.js 'src/**/**/*.unit.@(js)'"
+    "mocha": "mocha ./test_setup.js 'src/**/**/*.unit.@(js)'",
+    "shonkwrap": "shonkwrap --dev"
   },
   "keywords": [],
   "author": "",
@@ -34,7 +35,7 @@
     "eslint": "^2.5.3",
     "eslint-config-airbnb": "^7.0.0",
     "eslint-plugin-jsx-a11y": "^0.6.2",
-    "eslint-plugin-react": "^5.0.1",
+    "eslint-plugin-react": "^4.3.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -61,6 +62,7 @@
     "request": "^2.72.0",
     "rimraf": "^2.5.1",
     "sass-loader": "^3.2.0",
+    "shonkwrap": "^1.3.0",
     "sinon": "^1.17.4",
     "socket.io-client": "^1.4.4",
     "style-loader": "^0.13.1",
