--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,13 @@
     "es2015",
     "react",
     "stage-2"
+  ],
+  "plugins": [
+    [
+      "react-intl", {
+        "messagesDir": "./extracted-messages/"
+      }
+    ],
+    "transform-object-rest-spread"
   ]
 }
