--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   "devDependencies": {
     "babel-cli": "^6.6.5",
     "babel-core": "^6.4.0",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.1",
+    "babel-plugin-react-intl": "^2.1.3",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-airbnb": "^1.1.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
@@ -55,6 +58,7 @@
     "react-addons-test-utils": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-hot-loader": "^1.3.0",
+    "react-intl": "^2.1.3",
     "react-redux": "^4.0.6",
     "react-router": "^2.2.3",
     "redux": "^3.0.5",
