WD-67 Fixed `npm run deploy`, updated how `USER_AUTH` env variable is used/passed, updated configureStore for prod

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build:webpack": "webpack --config webpack.config.prod.js",
     "build:server": "babel src/server --out-dir dist/server --copy-files",
     "build": "npm run clean && npm run build:webpack && npm run build:server",
-    "deploy": "NODE_ENV=production PORT=4000 npm run build && NODE_ENV=production PORT=4000 node dist/server/server.js",
-    "start": "npm rebuild node-sass && ENABLE_AUTH=true babel-node src/server/server.js",
-    "start:noauth": "npm rebuild node-sass && ENABLE_AUTH=false babel-node src/server/server.js",
+    "deploy": "NODE_ENV=production PORT=4000 USER_AUTH=disabled npm run build && NODE_ENV=production PORT=4000 node dist/server/server.js",
+    "start": "npm rebuild node-sass && USER_AUTH=enabled babel-node src/server/server.js",
+    "start:noauth": "npm rebuild node-sass && USER_AUTH=disabled babel-node src/server/server.js",
     "test": "npm run lint && npm run mocha",
     "test:watch": "npm run test -- --watch",
     "lint": "node_modules/eslint/bin/eslint.js src/",
