WD-67 - Updated Dockerfile, added docker-compose files for dev, prod - Added documentation for docker - For Ajax host, using local IP of mac rather than localhost

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,2 @@
-web:
-  build: .
-  # image: hector
-  ports:
-  - "8000:3000"
-  volumes:
-  - .:/usr/src/app/:rw
-  environment:
-  - NODE_ENV=dev
-  # Before you run this file for the first time, make sure
-  # you remove node_modules/ folders in your host machine
-  command: >
-    sh -c '
-    if test -d node_modules;
-    then
-      echo node_modules_exists ;
-    fi &&
-    npm install &&
-    npm start
-    '
+web: {}
+
