--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-preset-stage-2": "^6.5.0",
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
+    "connect-redis": "^3.1.0",
     "cookie-parser": "^1.4.1",
     "css-loader": "^0.23.1",
     "enzyme": "^2.2.0",
@@ -66,6 +67,7 @@
     "react-intl": "^2.1.3",
     "react-redux": "^4.0.6",
     "react-router": "^2.2.3",
+    "redis": "^2.6.2",
     "redux": "^3.0.5",
     "redux-promise-middleware": "^3.0.0",
     "request": "^2.72.0",
