--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-2": "^6.5.0",
+    "bootstrap": "^3.3.7",
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
     "connect-redis": "^3.1.0",
@@ -54,6 +55,8 @@
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^8.3.1",
     "json-loader": "^0.5.4",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "mocha": "^2.3.4",
     "morgan": "^1.7.0",
     "node-sass": "^3.4.2",
@@ -62,6 +65,7 @@
     "q": "^1.4.1",
     "react": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
+    "react-bootstrap": "^0.30.3",
     "react-dom": "^15.0.1",
     "react-hot-loader": "^1.3.0",
     "react-intl": "^2.1.3",
