WD-80 Fixed dev, prod for refresh, loading png, removed unused docker compose files, serving app from dist on dev

--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf dist",
-    "build:webpack": "webpack --config webpack.config.prod.js",
+    "build:app-dev": "webpack --config webpack.config.dev.js",
+    "build:app-prod": "webpack --config webpack.config.prod.js",
     "build:server": "babel src/server --out-dir dist/server --copy-files",
-    "build": "npm run clean && npm run build:webpack && npm run build:server",
-    "deploy": "NODE_ENV=production PORT=4000 USER_AUTH=disabled npm run build && NODE_ENV=production PORT=4000 node dist/server/server.js",
-    "start": "npm rebuild node-sass && USER_AUTH=enabled babel-node src/server/server.js",
-    "start:noauth": "npm rebuild node-sass && USER_AUTH=disabled babel-node src/server/server.js",
+    "build:dev": "npm run clean && npm run build:app-dev && npm run build:server",
+    "build:prod": "npm run clean && npm run build:app-prod && npm run build:server",
+    "deploy": "NODE_ENV=production PORT=4000 USER_AUTH=disabled npm run build:prod && NODE_ENV=production PORT=4000 node dist/server/server.js",
+    "start": "npm rebuild node-sass && USER_AUTH=enabled babel-node dist/server/server.js",
+    "start:noauth": "npm rebuild node-sass && USER_AUTH=disabled babel-node dist/server/server.js",
     "test": "npm run lint && npm run mocha",
     "test:watch": "npm run test -- --watch",
     "lint": "node_modules/eslint/bin/eslint.js src/",
