--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-intl": "^2.1.3",
     "react-redux": "^4.0.6",
     "react-router": "^2.2.3",
+    "react-router-bootstrap": "^0.23.1",
     "redis": "^2.6.2",
     "redux": "^3.0.5",
     "redux-thunk": "^2.1.0",
@@ -83,6 +84,7 @@
     "sinon": "^1.17.4",
     "socket.io-client": "^1.4.4",
     "style-loader": "^0.13.1",
+    "warning": "^2.1.0",
     "webpack": "^1.12.11",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.6.4"
