WD-92 configured auth only when env variable is enabled, removed socketIO module, changed app title

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:server": "babel src/server --out-dir dist/server --copy-files",
     "build:dev": "npm run clean && npm run build:app-dev && npm run build:server",
     "build:prod": "npm run clean && npm run build:app-prod && npm run build:server",
-    "deploy": "NODE_ENV=production PORT=4000 USER_AUTH=disabled npm run build:prod && NODE_ENV=production PORT=4000 node dist/server/server.js",
+    "deploy": "NODE_ENV=production PORT=4000 USER_AUTH=disabled npm run build:prod && NODE_ENV=production PORT=4000 USER_AUTH=disabled node dist/server/server.js",
     "start": "npm rebuild node-sass && USER_AUTH=enabled babel-node dist/server/server.js",
     "start:noauth": "npm rebuild node-sass && USER_AUTH=disabled babel-node dist/server/server.js",
     "test": "npm run lint && npm run mocha",
@@ -82,7 +82,6 @@
     "sass-loader": "^3.2.0",
     "shonkwrap": "^1.3.0",
     "sinon": "^1.17.4",
-    "socket.io-client": "^1.4.4",
     "style-loader": "^0.13.1",
     "warning": "^2.1.0",
     "webpack": "^1.12.11",
