--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express-session": "^1.13.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "font-awesome": "^4.6.3",
     "http-proxy-middleware": "^0.15.0",
     "immutable": "^3.7.6",
     "isomorphic-fetch": "^2.2.1",
@@ -83,6 +84,7 @@
     "shonkwrap": "^1.3.0",
     "sinon": "^1.17.4",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "warning": "^2.1.0",
     "webpack": "^1.12.11",
     "webpack-dev-middleware": "^1.5.1",
