--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf dist",
-    "build:app-dev": "webpack --config webpack.config.dev.js",
+    "build:app-dev": "node_modules/webpack/bin/webpack.js --config webpack.config.dev.js",
     "build:app-prod": "webpack --config webpack.config.prod.js",
     "build:server": "babel src/server --out-dir dist/server --copy-files",
     "build:dev": "npm run clean && npm run build:app-dev && npm run build:server",
@@ -16,8 +16,7 @@
     "test": "npm run lint && npm run mocha",
     "test:watch": "npm run test -- --watch",
     "lint": "node_modules/eslint/bin/eslint.js src/",
-    "mocha": "mocha ./test_setup.js 'src/**/**/*.unit.@(js)'",
-    "shonkwrap": "shonkwrap --dev"
+    "mocha": "mocha ./test_setup.js 'src/**/**/*.unit.@(js)'"
   },
   "keywords": [],
   "author": "",
@@ -26,14 +25,14 @@
     "type": "git",
     "url": "git://github.com/harsh376/Hector.git"
   },
-  "devDependencies": {
+  "dependencies": {
     "babel-cli": "^6.6.5",
     "babel-core": "^6.4.0",
-    "babel-eslint": "^6.1.2",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.1",
     "babel-plugin-react-intl": "^2.1.3",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-airbnb": "^1.1.1",
+    "babel-preset-airbnb": "^2.2.3",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-2": "^6.5.0",
@@ -42,27 +41,28 @@
     "chai-immutable": "^1.5.3",
     "connect-redis": "^3.1.0",
     "cookie-parser": "^1.4.1",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.26.2",
     "enzyme": "^2.2.0",
-    "eslint": "^2.5.3",
-    "eslint-config-airbnb": "^7.0.0",
-    "eslint-plugin-jsx-a11y": "^0.6.2",
-    "eslint-plugin-react": "^4.3.0",
+    "eslint": "^3.17.1",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
     "font-awesome": "^4.6.3",
-    "http-proxy-middleware": "^0.15.0",
+    "http-proxy-middleware": "^0.17.4",
     "immutable": "^3.7.6",
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^8.3.1",
     "json-loader": "^0.5.4",
-    "less": "^2.7.1",
+    "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "mocha": "^2.3.4",
     "morgan": "^1.7.0",
-    "node-sass": "^3.4.2",
+    "node-sass": "^4.5.0",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "q": "^1.4.1",
@@ -70,23 +70,21 @@
     "react-addons-test-utils": "^15.0.1",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.0.1",
-    "react-hot-loader": "^1.3.0",
     "react-intl": "^2.1.3",
-    "react-redux": "^4.0.6",
-    "react-router": "^2.2.3",
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.2",
     "react-router-bootstrap": "^0.23.1",
     "redis": "^2.6.2",
     "redux": "^3.0.5",
     "redux-thunk": "^2.1.0",
     "request": "^2.72.0",
     "rimraf": "^2.5.1",
-    "sass-loader": "^3.2.0",
-    "shonkwrap": "^1.3.0",
+    "sass-loader": "^6.0.2",
     "sinon": "^1.17.4",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "warning": "^2.1.0",
-    "webpack": "^1.12.11",
+    "warning": "^3.0.0",
+    "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.6.4"
   }
