--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test": "npm run lint && npm run mocha",
     "test:watch": "npm run test -- --watch",
     "lint": "node_modules/eslint/bin/eslint.js src/",
-    "mocha": "mocha ./test_setup.js 'src/**/**/*.unit.@(js)'"
+    "mocha": "mocha ./test_setup.js 'src/**/**/*.unit.@(js)'",
+    "jest": "node_modules/jest/bin/jest.js"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +30,7 @@
     "babel-cli": "^6.6.5",
     "babel-core": "^6.4.0",
     "babel-eslint": "^7.1.1",
+    "babel-jest": "^19.0.0",
     "babel-loader": "^6.2.1",
     "babel-plugin-react-intl": "^2.1.3",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
@@ -56,12 +58,14 @@
     "http-proxy-middleware": "^0.17.4",
     "immutable": "^3.7.6",
     "isomorphic-fetch": "^2.2.1",
+    "jest": "^19.0.2",
     "jsdom": "^8.3.1",
     "json-loader": "^0.5.4",
     "less": "^2.7.2",
-    "less-loader": "^2.2.3",
+    "less-loader": "^3.0.0",
     "mocha": "^2.3.4",
     "morgan": "^1.7.0",
+    "nock": "^9.0.9",
     "node-sass": "^4.5.0",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
@@ -74,8 +78,10 @@
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "react-router-bootstrap": "^0.23.1",
+    "react-test-renderer": "^15.4.2",
     "redis": "^2.6.2",
     "redux": "^3.0.5",
+    "redux-mock-store": "^1.2.2",
     "redux-thunk": "^2.1.0",
     "request": "^2.72.0",
     "rimraf": "^2.5.1",
