--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
     "build:app-dev": "node_modules/webpack/bin/webpack.js --config webpack.config.dev.js",
     "build:app-prod": "webpack --config webpack.config.prod.js",
     "build:server": "babel src/server --out-dir dist/server --copy-files",
-    "build:dev": "npm run clean && npm run build:app-dev && npm run build:server",
+    "build:dev": "yarn run clean && yarn run build:app-dev && yarn run build:server",
     "build:prod": "npm run clean && npm run build:app-prod && npm run build:server",
     "deploy": "NODE_ENV=production PORT=4000 USER_AUTH=disabled npm run build:prod && NODE_ENV=production PORT=4000 USER_AUTH=disabled node dist/server/server.js",
     "start": "npm rebuild node-sass && USER_AUTH=enabled babel-node dist/server/server.js",
     "start:noauth": "npm rebuild node-sass && USER_AUTH=disabled babel-node dist/server/server.js",
-    "test": "npm run lint && npm run mocha",
-    "test:watch": "npm run test -- --watch",
+    "test": "yarn run lint && yarn run jest",
+    "test:watch": "yarn run test -- --watch",
     "lint": "node_modules/eslint/bin/eslint.js src/",
     "mocha": "mocha ./test_setup.js 'src/**/**/*.unit.@(js)'",
     "jest": "node_modules/jest/bin/jest.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git://github.com/harsh376/Hector.git"
