--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build:app-prod": "webpack --config webpack.config.prod.js",
     "build:server": "babel src/server --out-dir dist/server --copy-files",
     "build:dev": "yarn run clean && yarn run build:app-dev && yarn run build:server",
-    "build:prod": "npm run clean && npm run build:app-prod && npm run build:server",
-    "deploy": "NODE_ENV=production PORT=4000 USER_AUTH=disabled npm run build:prod && NODE_ENV=production PORT=4000 USER_AUTH=disabled node dist/server/server.js",
+    "build:prod": "yarn run clean && yarn run build:app-prod && yarn run build:server",
+    "deploy": "NODE_ENV=production PORT=4000 USER_AUTH=disabled yarn run build:prod && NODE_ENV=production PORT=4000 USER_AUTH=disabled node dist/server/server.js",
     "start": "npm rebuild node-sass && USER_AUTH=enabled babel-node dist/server/server.js",
     "start:noauth": "npm rebuild node-sass && USER_AUTH=disabled babel-node dist/server/server.js",
     "test": "yarn run lint && yarn run jest",
