--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "bootstrap": "^3.3.7",
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
+    "compression": "^1.6.2",
     "compression-webpack-plugin": "^0.3.2",
     "connect-redis": "^3.1.0",
     "cookie-parser": "^1.4.1",
