--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "font-awesome": "^4.6.3",
+    "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.4",
     "immutable": "^3.7.6",
     "isomorphic-fetch": "^2.2.1",
