--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf dist",
-    "bundle:dev": "node_modules/webpack/bin/webpack.js --config webpack.config.dev.js",
-    "bundle:prod": "webpack --config webpack.config.prod.js",
+    "bundle:dev": "node_modules/webpack/bin/webpack.js --config webpack/webpack.config.dev.js",
+    "bundle:prod": "node_modules/webpack/bin/webpack.js --config webpack/webpack.config.prod.js",
     "build:server": "babel src/server --out-dir dist/server --copy-files",
     "build:dev": "yarn run clean && yarn run bundle:dev && yarn run build:server",
     "build:prod": "yarn run clean && yarn run bundle:prod && yarn run build:server",
