--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:watch": "yarn run test -- --watch",
     "lint": "node_modules/eslint/bin/eslint.js src/",
     "mocha": "mocha ./test_setup.js 'src/**/**/*.unit.@(js)'",
-    "jest": "node_modules/jest/bin/jest.js"
+    "jest": "node_modules/jest/bin/jest.js",
+    "flow": "node_modules/flow-bin/cli.js"
   },
   "keywords": [],
   "author": "",
@@ -58,6 +59,7 @@
     "express-session": "^1.13.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
+    "flow-bin": "^0.42.0",
     "font-awesome": "^4.6.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.4",
