--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "node-sass": "^4.5.0",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
+    "prettier": "^0.22.0",
     "q": "^1.4.1",
     "react": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
