added npm package empty to fix scss flow errors

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "deploy:heroku": "NODE_ENV=production USER_AUTH=disabled node dist/server/server.js",
     "start": "npm rebuild node-sass && USER_AUTH=enabled babel-node dist/server/server.js",
     "start:noauth": "npm rebuild node-sass && USER_AUTH=disabled babel-node dist/server/server.js",
-    "test": "yarn run lint && yarn run jest",
+    "test": "yarn run flow && yarn run jest",
     "test:watch": "yarn run test -- --watch",
     "lint": "node_modules/eslint/bin/eslint.js src/",
     "mocha": "mocha ./test_setup.js 'src/**/**/*.unit.@(js)'",
@@ -49,6 +49,7 @@
     "connect-redis": "^3.1.0",
     "cookie-parser": "^1.4.1",
     "css-loader": "^0.26.2",
+    "empty": "^0.10.1",
     "enzyme": "^2.2.0",
     "eslint": "^3.17.1",
     "eslint-plugin-import": "^2.2.0",
